--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
   --border: 8px;
   --shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   --link-color: lightgray;
+  --algorithm-description: #faf7f7;
 }
 
 [data-theme='dark'] {
@@ -22,6 +23,7 @@
   --fact-text-color: black;
   --shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   --link-color: gray;
+  --algorithm-description: #1e1e1e;
 }
 
 html {
@@ -99,6 +101,10 @@ body {
   text-align: center;
   text-decoration: none;
   font-size: 1rem;
+}
+
+.w {
+  margin-left: 1rem;
 }
 
 .button:hover {
@@ -575,7 +581,7 @@ svg {
 }
 
 .algorithm-description {
-  background: #faf7f7;
+  background: var(--algorithm-description);
   border: 3.5px solid #f5eded;
   border-radius: var(--border);
   padding: 0 1rem;
