--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
   --main-bg: #f5f5f3;
   --surface: white;
   --text-color: black;
-  --on-hover: #f5f5f5;
+  --on-hover: orange;
   --dropdown-item: white;
   --fact-text-color: black;
   --border: 8px;
@@ -874,9 +874,9 @@ circle:hover {
 
 .theme-switch {
   display: inline-block;
-  height: 34px;
+  height: 1rem;
+  width: 2.5rem;
   position: relative;
-  width: 60px;
 }
 
 .theme-switch input {
@@ -896,13 +896,13 @@ circle:hover {
 
 .slider:before {
   background-color: #fff;
-  bottom: 4px;
+  bottom: 0.01rem;
   content: '';
-  height: 26px;
-  left: 4px;
+  height: 1rem;
+  left: 0.05rem;
   position: absolute;
   transition: 0.4s;
-  width: 26px;
+  width: 1rem;
 }
 
 input:checked + .slider {
@@ -1083,14 +1083,14 @@ li {
   background: var(--dropdown-item);
   display: block;
   float: left;
-  padding: 1rem;
+  margin: 0 1rem;
   position: relative;
   text-decoration: none;
   transition-duration: 0.5s;
 }
 
-li:hover {
-  background: var(--on-hover);
+li a:hover {
+  color: orange;
   cursor: pointer;
 }
 
@@ -1101,7 +1101,6 @@ ul li ul {
   min-width: 5rem;
   position: absolute;
   transition: all 0.5s ease;
-  margin-top: 1rem;
   left: 0;
   display: none;
 }
@@ -1114,6 +1113,7 @@ ul li ul:hover {
 }
 
 ul li ul li {
+  margin: 1rem;
   clear: both;
   width: 100%;
 }
