--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,8 @@
   --shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   --link-color: lightgray;
   --algorithm-description: #faf7f7;
+  --icon-color: #7a7a7a;
+  --icon-background: lightgray;
 }
 
 [data-theme='dark'] {
@@ -24,6 +26,7 @@
   --shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   --link-color: gray;
   --algorithm-description: #1e1e1e;
+  --icon-color: #7a7a7a;
 }
 
 html {
@@ -239,10 +242,6 @@ body {
 .graph-classes {
   display: flex;
   flex-direction: column;
-}
-
-strong {
-  font-weight: 1000;
 }
 
 .red {
@@ -495,7 +494,7 @@ svg {
   overflow-y: auto;
   overflow-x: hidden;
   line-height: 26px;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .d3-context-menu {
@@ -747,45 +746,6 @@ svg {
   height: 95%;
 }
 
-.left-side {
-  display: flex;
-  flex-direction: column;
-  padding: 0 1em 1em 0;
-  width: 50%;
-  height: 100%;
-}
-
-.surface {
-  display: flex;
-  flex: 1 0 auto;
-  width: 100%;
-  border-radius: var(--border);
-  background-color: var(--surface);
-}
-
-.sandbox-graph-container {
-  display: flex;
-  flex: 0.5;
-  flex-direction: column;
-  width: 100%;
-  position: relative;
-}
-
-.nice-tree-container {
-  display: flex;
-  flex-direction: column;
-  padding: 0 1em 1em 0;
-  flex: 1;
-  width: 100%;
-  position: relative;
-}
-
-.right-side {
-  display: flex;
-  width: 50%;
-  height: 100%;
-}
-
 #controls {
   display: flex;
   flex-direction: column;
@@ -811,40 +771,13 @@ svg {
   transition: color 150ms ease-in;
 }
 
-.big {
-  position: relative;
-}
-
-.big::before,
-.big::after {
-  --scale: 0;
-  position: absolute;
-  left: 125%;
-  transform: scale(var(--scale));
-  transition: 150ms transform;
-  transform-origin: left center;
-}
-
-.big::before {
-  content: attr(data-tooltip);
-  color: white;
-  padding: 0.5rem;
-  border-radius: 0.3rem;
-  width: max-content;
-  background: #474747;
-  font-weight: bold;
-}
-
-.big:hover::before,
-.big:hover::after {
-  --scale: 1;
-  z-index: 500;
-}
-
 circle:hover {
   cursor: grab;
 }
 
+ellipse:hover {
+  cursor: grab;
+}
 .separator-exercise-output {
   display: flex;
   font-size: 1.1rem;
@@ -1198,4 +1131,62 @@ th {
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* Sandbox Mode */
+.sandbox-grid {
+  height: 98%;
+  width: 98%;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card {
+  position: relative;
+  background: var(--surface);
+  box-shadow: var(--shadow);
+  border-radius: var(--border);
+}
+
+.card-tall {
+  position: relative;
+  grid-column: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.draw-graph-button {
+  position: absolute;
+  left: 0.5rem;
+  bottom: 0.5rem;
+  color: var(--icon-color);
+  opacity: 90%;
+  z-index: 99999999999999999999999999999999999999999999999999999;
+}
+
+.custom-button {
+  padding: 0.3rem;
+  background: var(--icon-background);
+  border-radius: 2rem;
+  color: var(--icon-color);
+  margin: 0 0.2rem;
+  opacity: 90%;
+  z-index: 99999999999999999999999999999999999999999999999999999;
+}
+
+#sandbox-graph {
+  width: 100%;
+  height: 100%;
+}
+
+.sandbox-grid svg {
+  position: absolute;
+}
+
+.graph-buttons-container {
+  position: absolute;
+  left: 0.5rem;
+  bottom: 0.5rem;
+  display: flex;
 }
